--- a/confServer/conf-server-deploy.yaml
+++ b/confServer/conf-server-deploy.yaml
@@ -21,5 +21,5 @@ spec:
           name: config-server
           image: hyness/spring-cloud-config-server
           ports:
-            - containerPort: 8080
-              protocol: HTTP
+          - containerPort: 8080
+            protocol: TCP
