--- a/confServer/conf-server-service.yaml
+++ b/confServer/conf-server-service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: conf-server-service
+  name: config-server-service
   labels:
-    run: conf-server-service
+    run: config-server-service
 spec:
   ports:
   - protocol: TCP
