--- a/confServer/conf-server-deploy.yaml
+++ b/confServer/conf-server-deploy.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: conf-server-deploy
+  name: config-server-deploy
   labels:
-    app: conf-server-deploy
+    app: config-server-deploy
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: conf-server-deploy
+      app: config-server-deploy
   template:
     metadata:
       labels:
-        app: conf-server-deploy
+        app: config-server-deploy
     spec:
       containers:
         - env:
