--- a/confServer/conf-server-deploy.yaml
+++ b/confServer/conf-server-deploy.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: config-server-deploy
     spec:
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
       containers:
         - env:
           - name: SPRING_CLOUD_CONFIG_SERVER_GIT_URI
