--- a/onboarding/onboarding-deploy.yaml
+++ b/onboarding/onboarding-deploy.yaml
@@ -29,3 +29,5 @@ spec:
               value: 'true'
             - name: SPRING_PROFILES_ACTIVE
               value: 'pro' 
+            - name: SPRING_CLOUD_CONFIG_LABEL
+              value: 'master'
