--- a/confServer/conf-server-deploy.yaml
+++ b/confServer/conf-server-deploy.yaml
@@ -14,13 +14,7 @@ spec:
       labels:
         app: config-server-deploy
     spec:
-       dnsPolicy: "None"
-         dnsConfig:
-           nameservers:
-             - 1.2.3.4
-    searches:
-      - ns1.svc.cluster-domain.example
-      - my.dns.search.suffix
+      dnsPolicy: ClusterFirst
       restartPolicy: Always
       containers:
         - env:
