--- a/web-admin/web-admin-deploy.yaml
+++ b/web-admin/web-admin-deploy.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: web-admin-deploy
     spec:
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
       containers:
         - name: web-admin
           image: residencia2020/web-admin:v1.0.0
