--- a/mongodb/persistentvolume.yaml
+++ b/mongodb/persistentvolume.yaml
@@ -13,4 +13,4 @@ spec:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: "/etc/mongodbyoconsumo"
+    path: "/etc/mongoDByoconsumo2020"
