--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,23 +1,14 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: devops-demo-ci
-  namespace: devops
-  labels:
-    app: demp-ci
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+  name: yoconsumo-ingress
 spec:
+  tls:
+  - secretName: secure-tls
   rules:
-  - host: devops-demo-ci.yoconsumo.municipiodeoaxaca.gob.mx
+  - host: yoconsumo.municipiodeoaxaca.gob.mx
     http:
       paths:
-      - path: /
-        backend:
-          serviceName: devops-demo-ci
+      - backend:
+          serviceName: yoconsumo-ent-yc
           servicePort: 80
-  tls:
-  -  secretName: secure-tls
-     hosts:
-     - devops-demo-ci.yoconsumo.municipiodeoaxaca.gob.mx
