--- a/web-cust-pr/web-cust-pr-service.yaml
+++ b/web-cust-pr/web-cust-pr-service.yaml
@@ -7,7 +7,8 @@ metadata:
     run: yoconsumo-ent-yc
 spec:
   ports:
-  - port: 80
+  - name: port-cust-pr
+    port: 80
     protocol: TCP
     targetPort: 80
   selector:
