--- a/web-cust-pr/web-cust-pr-service.yaml
+++ b/web-cust-pr/web-cust-pr-service.yaml
@@ -6,9 +6,10 @@ metadata:
   labels:
     run: yoconsumo-ent-yc
 spec:
+  type: NodePort
   ports:
   - name: port-cust-pr
-    port: 443
+    port: 80
     protocol: TCP
     targetPort: 80
   selector:
