--- a/web-cust-pr/web-cust-pr-service.yaml
+++ b/web-cust-pr/web-cust-pr-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: web-cust-pr-service
   namespace: default
   labels:
-    run: yoconsumo-ent-yc
+    run: web-cust-pr-service
 spec:
   type: NodePort
   ports:
