--- a/web-cust-pr/web-cust-pr-service.yaml
+++ b/web-cust-pr/web-cust-pr-service.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     run: web-cust-pr-service
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
   - name: port-cust-pr
     port: 80
