--- a/ingress-yc.yaml
+++ b/ingress-yc.yaml
@@ -1,14 +1,23 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: yoconsumo-ingress
+  namespace: default
+  labels:
+    app: yoconsumo-ingress
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
-  tls:
-  - secretName: secure-tls
   rules:
   - host: yoconsumo.municipiodeoaxaca.gob.mx
     http:
       paths:
-      - backend:
+      - path: /
+        backend:
           serviceName: web-cust-pr-service
           servicePort: port-cust-pr
+  tls:
+  -  secretName: secure-tls
+     hosts:
+     - yoconsumo.municipiodeoaxaca.gob.mx
