--- a/ingress-yc.yaml
+++ b/ingress-yc.yaml
@@ -1,23 +1,20 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: yoconsumo-ingress
-  namespace: default
-  labels:
-    app: yoconsumo-ingress
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+  name: public-ingress
 spec:
-  rules:
-  - host: yoconsumo.municipiodeoaxaca.gob.mx
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: web-cust-pr-service
-          servicePort: port-cust-pr
   tls:
-  -  secretName: secure-tls
-     hosts:
-     - yoconsumo.municipiodeoaxaca.gob.mx
+    - hosts:
+      - yoconsumo.municipiodeoaxaca.gob.mx
+      # This assumes tls-secret exists and the SSL
+      # certificate contains a CN for foo.bar.com
+      secretName: secure-tls
+  rules:
+    - host: yoconsumo.municipiodeoaxaca.gob.mx
+      http:
+        paths:
+        - path: /
+          backend:
+            # This assumes http-svc exists and routes to healthy endpoints
+            serviceName: web-cust-pr-service
+            servicePort: 80
