--- a/admin-security/admin-security-deploy.yaml
+++ b/admin-security/admin-security-deploy.yaml
@@ -15,7 +15,7 @@ spec:
         app: admin-security-deploy
     spec:
       containers:
-        - name: provider-security
+        - name: admin-security
           image: residencia2020/admin-security:v1.0.1
           ports:
             - containerPort: 8080
